Some refactoring added
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>